# lidar-object-detection

./: CMakeLists.txt  package.xml
msg/: bbox.msg  detector.msg
src/: main.cpp
src/render/: render.cpp  render.h
